Ensure recipe details remain in one row on smaller devices.

--- a/projects/plugins/jetpack/extensions/blocks/recipe/style.scss
+++ b/projects/plugins/jetpack/extensions/blocks/recipe/style.scss
@@ -8,27 +8,22 @@
   align-items: center;
   display: grid;
   gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(max-content, 150px));
   margin-bottom: 3rem;
   margin-top: 1.75rem;
   
   @media (min-width: 782px) {
     margin-bottom: 6rem;
-    grid-template-columns: repeat(auto-fit, minmax(max-content, 150px));
   }
 
   &__detail {
     font-size: 0.875rem;
     margin-right: 1rem;
     padding-right: 1rem;
-
-    @media (min-width: 782px) {
-      text-align: center;
-    }
+    text-align: center;
 
     &:not(:last-child) {
-      @media (min-width: 782px) {
-        border-right: 1px solid currentColor;
-      }
+      border-right: 1px solid currentColor;
     }
 
     p {
